variables.Variables.scala.error
Compilation error:
Variables:11: error: identifier expected but ')' found.
    while (y!=x:){backward()}
                ^Variables:15: error: Missing closing brace `}' assumed here
	}
        ^Variables:15: error: ')' expected but '}' found.
	}
        ^